<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coupon Manager</string>
    <string name="action_settings">Settings</string>
    <string name="show_activity_log">History</string>
    <string name="show_coupons">Show</string>
    <string name="update_coupon_count">Update</string>
    <string name="title_activity_update">Update Coupons</string>
    
    <string name="field_coupon">Coupon</string>
    <string name="field_count">Count</string>
    <string name="field_change_type">Change type</string>
    <string name="button_save">Save</string>
    <string name="button_checkout">Checkout</string>
    
    <string-array name="coupons_array">
        <item>SUDEXO - Rs 5</item>
        <item>SUDEXO - Rs 10</item>
        <item>SUDEXO - Rs 20</item>
        <item>SUDEXO - Rs 35</item>
        <item>SUDEXO - Rs 50</item>
        <item>SUDEXO - Rs 100</item>
        <item>SUDEXO - Rs 500</item>
    </string-array>
    
    <string-array name="change_type_array">
        <item>ADD</item>
        <item>REMOVE</item>
        <item>SET</item>
    </string-array>
    

</resources>
