<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uttam.couponmanager.activities.MainActivity" >

    <Button
        android:id="@+id/showCouponsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="showCouponCountEntries"
        android:text="@string/show_coupons" />

    <Button
        android:id="@+id/updateCouponsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayoutScrollView"
        android:layout_centerHorizontal="true"
        android:onClick="updateCouponCountEntry"
        android:text="@string/update_coupon_count" />

    <Button
        android:id="@+id/showChangeLogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayoutScrollView"
        android:layout_alignParentRight="true"
        android:onClick="showChangeLogEntries"
        android:text="@string/show_activity_log" />

    <ScrollView
        android:id="@+id/tableLayoutScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/showCouponsButton"
        android:layout_below="@+id/showCouponsButton"
        android:layout_marginTop="72dp" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:padding="10dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/showChangeLogButton"
        android:layout_below="@+id/showChangeLogButton"
        android:onClick="checkout"
        android:text="@string/button_checkout" />

    <EditText
        android:id="@+id/checkoutAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_checkout"
        android:layout_toLeftOf="@+id/button_checkout"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

</RelativeLayout>